--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "discord.js-poll-embed": "^1.0.2",
     "dotenv": "^8.2.0",
     "ffmpeg-static": "^4.2.7",
+    "genius-lyrics-api": "^3.0.3",
     "html-entities": "^1.3.1",
     "keyv": "^4.0.3",
     "popyt": "^4.1.2",
