--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
-  "name": "b00mer",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node ./src/bot.js",
-    "dev": "nodemon ./src/bot.js"
-  },
-  "author": "Anis Abdellatif",
-  "license": "ISC",
-  "dependencies": {
-    "@discordjs/opus": "^0.5.0",
-    "@keyv/mysql": "^1.1.4",
-    "array-move": "^3.0.1",
-    "discord.js": "^12.5.3",
-    "discord.js-poll-embed": "^1.0.2",
-    "dotenv": "^8.2.0",
-    "ffmpeg-static": "^4.3.0",
-    "genius-lyrics-api": "^3.0.6",
-    "html-entities": "^2.3.2",
-    "keyv": "^4.0.3",
-    "popyt": "^5.0.0",
-    "pretty-ms": "^7.0.1",
-    "request": "^2.88.2",
-    "ytdl-core": "^4.5.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.7"
-  }
+    "name": "b00mer",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node ./src/bot.js",
+        "dev": "nodemon ./src/bot.js"
+    },
+    "author": "Anis Abdellatif",
+    "license": "ISC",
+    "type": "module",
+    "dependencies": {
+        "@discordjs/opus": "^0.5.0",
+        "@keyv/mysql": "^1.1.4",
+        "array-move": "^3.0.1",
+        "discord.js": "^12.5.3",
+        "discord.js-poll-embed": "^1.0.2",
+        "dotenv": "^8.2.0",
+        "ffmpeg-static": "^4.3.0",
+        "genius-lyrics-api": "^3.0.6",
+        "html-entities": "^2.3.2",
+        "keyv": "^4.0.3",
+        "popyt": "^5.0.0",
+        "pretty-ms": "^7.0.1",
+        "request": "^2.88.2",
+        "validatorjs": "^3.22.1",
+        "ytdl-core": "^4.5.0"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.7"
+    }
 }
