--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@discordjs/opus": "^0.5.0",
         "@keyv/mysql": "^1.1.4",
+        "@local/logger": "./src/Logger.js",
         "array-move": "^3.0.1",
         "discord.js": "^12.5.3",
         "discord.js-poll-embed": "^1.0.2",
@@ -25,6 +26,7 @@
         "pretty-ms": "^7.0.1",
         "request": "^2.88.2",
         "validatorjs": "^3.22.1",
+        "winston": "^3.3.3",
         "ytdl-core": "^4.5.0"
     },
     "devDependencies": {
