--- a/package.json
+++ b/package.json
@@ -11,14 +11,13 @@
     "license": "ISC",
     "type": "module",
     "dependencies": {
-        "@discordjs/opus": "^0.5.0",
+        "@discordjs/opus": "^0.5.3",
         "@keyv/mysql": "^1.1.4",
-        "@local/logger": "./src/Logger.js",
         "array-move": "^3.0.1",
         "discord.js": "^12.5.3",
         "discord.js-poll-embed": "^1.0.2",
-        "dotenv": "^8.2.0",
-        "ffmpeg-static": "^4.3.0",
+        "dotenv": "^10.0.0",
+        "ffmpeg-static": "4.2.8",
         "genius-lyrics-api": "^3.0.6",
         "html-entities": "^2.3.2",
         "keyv": "^4.0.3",
@@ -27,7 +26,7 @@
         "request": "^2.88.2",
         "validatorjs": "^3.22.1",
         "winston": "^3.3.3",
-        "ytdl-core": "^4.5.0"
+        "ytdl-core": "^4.8.2"
     },
     "devDependencies": {
         "nodemon": "^2.0.7"
